--- a/style.css
+++ b/style.css
@@ -178,13 +178,13 @@
     align-items: center;
     justify-content: center;
 }
-.user-info-detail{
+.user-weather-details{
     display: flex;
-    width: 90%;
+    /* width: 90%; */
     flex-direction: column;
-    /* align-items: center; */
-    max-width: 550px;
-    margin: 0 auto;
+    align-items: center;
+    /* max-width: 550px; */
+    /* margin: 0 auto; */
     justify-content: center;
 }
 
@@ -193,12 +193,15 @@
     display: flex;
     align-items: center;
     gap: 10px;
+    justify-content: center;
 }
 
 .city-name{
     font-size: 2rem;
     font-weight: 200;
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-block-start: 1em;
     margin-block-end: 1em;
     margin-inline-start: 0px;
@@ -214,7 +217,9 @@
 }
 
 .about-sky{
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     /* text-align: center; */
     margin-block-start: 1em;
     margin-block-end: 1em;
@@ -229,6 +234,9 @@
 .sum-img{
     width: 90px;
     height: 90px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .temp{
@@ -283,6 +291,16 @@
 
 }
 
+@media (max-width: 768px){
+    .cards{
+        flex-direction: column;
+        align-items: center;
+    }
+    .parameter {
+        width: 100%;
+    }
+}
+
 
 
 .loading-container {
@@ -301,3 +319,4 @@
     justify-content: center;
     flex-direction: column;
 }
+
